--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -1237,6 +1237,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .pricing-card {
+  position: relative;
   border-radius: 0.5rem;
   border-width: 2px;
   border-style: dashed;
@@ -1248,6 +1249,38 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 2.5rem;
   padding-top: 5rem;
   padding-bottom: 2.5rem;
+}
+
+.pricing-label {
+  position: absolute;
+  top: 20px;
+  right: -15px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.pricing-label::after {
+  position: absolute;
+  top: 12px;
+  right: 6px;
+  z-index: -10;
+  height: 100%;
+  width: 2.5rem;
+  --tw-rotate: -30deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  content: var(--tw-content);
+  --tw-bg-opacity: 1;
+  background-color: rgb(202 138 4 / var(--tw-bg-opacity));
 }
 
 .pricing-heading {
