--- a/caferio/input.css
+++ b/caferio/input.css
@@ -140,7 +140,10 @@
   @apply w-full sm:w-8/12 md:w-7/12 lg:w-5/12 xl:w-4/12 p-6;
 }
 .pricing-card {
-  @apply bg-yellow-50 px-10 pt-20 pb-10 rounded-lg border-2 border-yellow-300 border-dashed;
+  @apply bg-yellow-50 px-10 pt-20 pb-10 rounded-lg border-2 border-yellow-300 border-dashed relative;
+}
+.pricing-label {
+  @apply absolute top-[20px] right-[-15px] py-2 px-5 bg-yellow-500 font-bold uppercase text-gray-800 text-xs after:absolute after:top-[12px] after:right-[6px] after:h-full after:w-10 after:bg-yellow-600 after:-rotate-[30deg] after:-z-10;
 }
 .pricing-heading {
   @apply text-center uppercase text-xl font-semibold text-orange-700;
