--- a/caferio/css/style.css
+++ b/caferio/css/style.css
@@ -1390,6 +1390,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .testimonials-heading {
   margin-top: 2rem;
+  margin-bottom: 2rem;
   font-size: 1.875rem;
   line-height: 2.25rem;
   font-weight: 600;
@@ -1482,6 +1483,42 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-text-opacity: 1;
   color: rgb(249 115 22 / var(--tw-text-opacity));
   opacity: .2;
+}
+
+.testimonials-gallery-col {
+  width: 33.333333%;
+  padding: 0.75rem;
+}
+
+@media (min-width: 640px) {
+  .testimonials-gallery-col {
+    width: 16.666667%;
+  }
+}
+
+@media (min-width: 1024px) {
+  .testimonials-gallery-col {
+    width: 33.333333%;
+  }
+}
+
+.testimonials-gallery {
+  height: auto;
+  width: 100%;
+  overflow: hidden;
+}
+
+.testimonials-gallery-img {
+  cursor: pointer;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 700ms;
+}
+
+.testimonials-gallery-img:hover {
+  --tw-scale-x: 1.3;
+  --tw-scale-y: 1.3;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media (min-width: 1280px) {
