--- a/caferio/input.css
+++ b/caferio/input.css
@@ -174,7 +174,7 @@
   @apply w-full md:w-10/12 lg:w-7/12;
 }
 .testimonials-heading {
-  @apply text-3xl font-semibold text-gray-900 mt-8;
+  @apply text-3xl font-semibold text-gray-900 my-8;
 }
 .testimonials-left-col {
   @apply w-full lg:w-8/12 p-3;
@@ -202,4 +202,13 @@
 }
 .testimonials-review-quote {
   @apply absolute top-3 left-3 text-9xl -z-10 text-orange-500 opacity-[.2];
+}
+.testimonials-gallery-col {
+  @apply w-4/12 sm:w-2/12 lg:w-4/12 p-3;
+}
+.testimonials-gallery {
+  @apply w-full h-auto overflow-hidden;
+}
+.testimonials-gallery-img {
+  @apply hover:scale-[1.3] transition-all duration-700 cursor-pointer;
 }
