--- a/caferio/input.css
+++ b/caferio/input.css
@@ -212,3 +212,10 @@
 .testimonials-gallery-img {
   @apply hover:scale-[1.3] transition-all duration-700 cursor-pointer;
 }
+/*light-box section*/
+.lightbox {
+  @apply fixed inset-0 w-full h-full bg-black/80 z-50 flex items-center justify-center;
+}
+.lightbox-body {
+  @apply bg-white w-[90%] max-h-[500px] h-full overflow-hidden;
+}
